--- a/src/main/resources/templates/plans/index.html
+++ b/src/main/resources/templates/plans/index.html
@@ -13,6 +13,7 @@
                 <button class="btn btn-primary"
                         th:hx-get="@{/plans/new}"
                         hx-target="#plan_page_content"
+                        hx-swap="outerHTML"
                 >
                     New Plan
                 </button>
