--- a/src/main/resources/templates/fragments/datepicker.html
+++ b/src/main/resources/templates/fragments/datepicker.html
@@ -8,7 +8,12 @@
         Day
     </div>
     <div class="flex flex-col justify-center">
-        <input type="number" th:placeholder="${month}" th:value="${month}" class="input input-bordered input-sm items-center" />
+        <input type="number"
+               th:placeholder="${month}"
+               th:value="${month}"
+               class="input input-bordered input-sm items-center"
+               hx-trigger="keyup changed delay:500ms"
+        />
         Month
     </div>
     <div class="flex flex-col">
