Wednesday May 3, 2024 Evening

--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -88,5 +88,6 @@
         <!-- For Datepicker -->
 
         <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+        <script src="//unpkg.com/alpinejs" defer></script>
     </body>
 </html>
