--- a/src/main/resources/templates/plans/index.html
+++ b/src/main/resources/templates/plans/index.html
@@ -5,7 +5,7 @@
       layout:decorate="~{layout/main}"
 >
 <body>
-    <section layout:fragment="content" id="plan_page_content" class="container mx-auto mt-4 min-h-dvh w-full z-0 flex flex-col">
+    <section layout:fragment="content" id="plan_page_content" class="container mx-auto mt-4 min-h-dvh w-full z-0 flex flex-col border-x-green-300">
         <div class="flex justify-between">
             <h1 id="text-xl font-black grow-0">Machines</h1>
             <div class="grow"></div>
